common-applications/test-environment/mindspore-repo-post-verify/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: repo-post-verify-deployment
  namespace: mindspore-repo-post-verify
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: repo-post-verify
  template:
    metadata:
      labels:
        app: repo-post-verify
    spec:
      imagePullSecrets:
        - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - name: repo-post-verify
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-repo-post-verify-test:0d9744911c06ea3d2d1055c35ce3f03615baa489
        resources:
          requests:
            cpu: 1000m
            memory: 2000Mi
          limits:
            cpu: 1000m
            memory: 2000Mi
        volumeMounts:
        - mountPath: /var/log
          name: log-storage
      volumes:
      - name: log-storage
        persistentVolumeClaim:
          claimName: mindspore-data-volume
