common-applications/test-environment/mindspore-repo-post-verify/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: repo-post-verify-service
  namespace: mindspore-repo-post-verify
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: repo-post-verify
  type: ClusterIP
