common-applications/test-environment/mindspore-repo-post-verify/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: mindspore-publish-beta-ingress
  namespace: mindspore-repo-post-verify
spec:
  tls:
    - hosts:
        - publish-beta-mindspore.test.osinfra.cn
      secretName: mindspore-publish-beta-tls
  rules:
    - host: publish-beta-mindspore.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: repo-post-verify-service
              servicePort: 8080
            path: /
